--- a/myapp/static/css/styles.css
+++ b/myapp/static/css/styles.css
@@ -33,10 +33,12 @@ Colors:
 /**************************/
 /*     General Styles     */
 /**************************/
-body,
-html {
+html, body {
     width: 100%;
 	height: 100%;
+	scroll-behavior: smooth ;
+	/* overflow-y: scroll; */
+
 }
 
 body, p {
