--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
 {% block content %}
 <div>
     <h1>This is Home</h1>
+    <h2><a href="{% url "portfolio_page" %}">Portfolio</a></h2>
 </div>
 
 {% endblock content %}
