--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -3,5 +3,26 @@
 {% block content %}
 <div>
     <h2>This is Pricing</h2>
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Store Location</th>
+            <th scope="col">Price</th>
+          </tr>
+        </thead>
+        <tbody>
+            {% for student in students %}
+            <tr>
+                {% comment %} forloop.counter le number badauxa ie i ko value jastei for i in range wala ma jastei {% endcomment %}
+                <th scope="row">{{ student.id }}</th>
+                <td>{{ student.name }}</td>
+                <td>{{ student.age }}</td>
+                <td>{{ student.address }}</td>
+                <td>{{ student.email }}</td>
+              </tr>
+            {% endfor %}
+        </tbody>
 </div>
 {% endblock content %}
