--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
 <div>
     <h1>This is Home</h1>
     <h2><a href="{% url "portfolio_page" %}">Portfolio</a></h2>
+    <h2><a href="{% url "add_classroom" %}">CRUD</a></h2>
 </div>
 
 {% endblock content %}
