--- a/templates/classbased/base.html
+++ b/templates/classbased/base.html
@@ -20,32 +20,14 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Classroom</a>
+                <a class="nav-link active" href="#">Classroom</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link active" href="#">Students</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link active" href="#">Add Students</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Table</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Students</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Add Students</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown link
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
               </li>
             </ul>
           </div>
