--- a/templates/classbased/base.html
+++ b/templates/classbased/base.html
@@ -20,13 +20,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Classroom</a>
+                <a class="nav-link active" href="{% url "classbased_classroom" %}">Classroom</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Students</a>
+                <a class="nav-link active" href="{% url "classbased_std" %}">Students</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Add Students</a>
+                <a class="nav-link active" href="{% url "classbased_addstd" %}">Add Students</a>
               </li>
               </li>
             </ul>
