--- a/templates/classbased/classroom_add.html
+++ b/templates/classbased/classroom_add.html
@@ -28,7 +28,7 @@
                 <th scope="row">{{ classroom.id }}</th>
                 <td>{{ classroom.class_name }}</td>
                 <td>
-                    <a class="btn btn-success" href="#">Update</a>
+                    <a class="btn btn-success" href="{% url "classbased_updateclass" classroom.id%}">Update</a>
                     <a class="btn btn-danger"href="{% url "classbased_deleteclass" classroom.id%}">Delete</a>
                   </td>
                
